meja/tests/shadowing-module-type-prover-checked.meja
module type S = {};

module T = {
  Prover {
    module type S = {};
  };
};

open T;

module type S' = S;
